<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/ip_adress_key"
        android:title="@string/ip_adress"
        android:defaultValue="@string/unknown"
        />
    <EditTextPreference
        android:key="@string/hysteresis_key"
        android:title="@string/hysteresis"
        android:defaultValue="@string/unknown"
        />
    <EditTextPreference
    android:key="@string/temperature_steps_key"
    android:title="@string/difference_between_steps"
    android:defaultValue="@string/unknown"
    />
    <EditTextPreference
        android:key="@string/email_adress_key"
        android:title="@string/email_adress"
        android:defaultValue="@string/unknown"
        />

</PreferenceScreen>