<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/desrciptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:gravity="right"/>

            <EditText
                android:id="@+id/desrciptionEditValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"/>


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:gravity="right"/>

            <ToggleButton
                android:id="@+id/toggleButtonState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:checked="true"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eventText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventText"
                android:gravity="right"/>

            <ToggleButton
                android:id="@+id/toggleButtonEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOn="@string/on_heating"
                android:textOff="@string/off_heating"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:gravity="right"/>

            <TextView
                android:id="@+id/timeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <Button
                android:id="@+id/setTimeButton"
                android:layout_width="wrap_content"
                android:text="@string/set"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeText"
                android:gravity="right"/>

            <ToggleButton
                android:id="@+id/toggleButtonType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOn="@string/week"
                android:textOff="@string/one_day"/>
        </TableRow>

        <RelativeLayout>

        </RelativeLayout>

        <TableRow
            android:id="@+id/dateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:gravity="right"/>

            <TextView
                android:id="@+id/dateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <Button
                android:id="@+id/setDateButton"
                android:layout_width="wrap_content"
                android:text="@string/set"/>


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/weekdaysGroup">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/week"/>
    <com.dpro.widgets.WeekdaysPicker
        android:id="@+id/weekdays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:sunday_first_day="false"
        app:highlight_color="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"

            android:textStyle="bold" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"

            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete"

            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>