<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >


    <TextView
        android:id="@+id/desrciption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:text="@string/unknown"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <Switch
        android:id="@+id/switchButton"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desrciption"
        android:layout_marginTop="8dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateValue"
        android:layout_marginTop="8dp"
        android:text="@string/hour" />

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desrciption"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/date"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:maxEms="5"
        android:text="12345678912345234634563" />

    <TextView
    android:id="@+id/hourValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/dateValue"
    android:layout_marginStart="19dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_toEndOf="@+id/hour"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:text="@string/unknown" />

    <TextView
        android:id="@+id/heatingState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:minWidth="70dp"
        android:layout_toStartOf="@+id/switchButton"
        android:textSize="17sp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/unknown"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textStyle="bold"
        android:layout_centerVertical="true"/>


</RelativeLayout>
